updated for git page

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Name of your blog (this will show up at the top of your page and in the RSS feed)
-name: Miami Notebook Program | Miami University
+name: Twitter Tracker
 
 # Short description (goes below the title; it will also be used in the RSS feed)
-description: The Miami Notebook Program at Miami University
+description: A twitter activity monitoring tool
 
 # Your name, as you want it to appear underneath each post and in the footer
 author: 
